Stable Edit Routine  - can add new routine name and date to database
Signed-off-by: Tamir Mishali <Tamirmishali@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,17 +47,16 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-
+    // for DatabaseDebug
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
     // ViewModel and LiveData - LifeCycle
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version" // use kapt for Kotlin
 
     //Room Dependencies
     implementation "android.arch.persistence.room:runtime:$room_version"
-    annotationProcessor "android.arch.persistence.room:compiler:$room_version" // use kapt for Kotlin
-
-
-
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    // use kapt for Kotlin
 
 
 }
