editWorkout  -edit routine on click and not on long press
Signed-off-by: Tamir Mishali <Tamirmishali@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
         <activity android:name=".EditWorkout"
             android:launchMode="singleTop"/>
-        <activity android:name=".AddRoutineActivity"
+        <activity android:name=".AddEditRoutineActivity"
             android:parentActivityName=".EditWorkout"
             android:launchMode="singleTop"/>
     </application>
