ExerciseAbstract  -RecycleView of all exerciseabstract related to a specific workout  -can delete an exercise without deleting an exerciseAbstract
Signed-off-by: Tamir Mishali <Tamirmishali@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
             android:parentActivityName=".Routine.EditRoutines"></activity>
         <activity android:name=".Workout.AddEditWorkoutActivity"
             android:parentActivityName=".Workout.EditWorkouts"></activity>
+        <activity android:name=".ExerciseAbstract.EditExercisesAbstract"
+            android:parentActivityName=".Workout.EditWorkouts"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
