--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
         <activity android:name=".ExerciseAbstract.EditExercisesAbstract"
             android:parentActivityName=".Workout.EditWorkouts"></activity>
         <activity android:name=".ExerciseAbstract.AddExerciseAbstractToWorkoutActivity"></activity>
+        <activity android:name=".ExerciseAbstract.AddEditExerciseAbsActivity"
+            android:parentActivityName=".ExerciseAbstract.AddExerciseAbstractToWorkoutActivity"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
