--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     // for DatabaseDebug
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
     // ViewModel and LiveData - LifeCycle
