--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
             android:parentActivityName=".ExerciseAbstract.AddExerciseAbstractToWorkoutActivity"></activity>
         <activity android:name=".WorkoutNow"
             android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".History.History"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".History.ViewPracticalWorkouts"
+            android:parentActivityName=".History.History"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
