--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,21 +21,17 @@
         <activity android:name=".Routine.AddEditRoutineActivity"
             android:parentActivityName=".Routine.EditRoutines"
             android:launchMode="singleTop"/>
-        <activity android:name=".Workout.EditWorkouts"
-            android:parentActivityName=".Routine.EditRoutines"></activity>
+        <activity android:name=".Workout.EditWorkouts"></activity>
         <activity android:name=".Workout.AddEditWorkoutActivity"
             android:parentActivityName=".Workout.EditWorkouts"></activity>
-        <activity android:name=".ExerciseAbstract.EditExercisesAbstract"
-            android:parentActivityName=".Workout.EditWorkouts"></activity>
+        <activity android:name=".ExerciseAbstract.EditExercisesAbstract"></activity>
         <activity android:name=".ExerciseAbstract.AddExerciseAbstractToWorkoutActivity"></activity>
         <activity android:name=".ExerciseAbstract.AddEditExerciseAbsActivity"
             android:parentActivityName=".ExerciseAbstract.AddExerciseAbstractToWorkoutActivity"></activity>
-        <activity android:name=".WorkoutNow"
-            android:parentActivityName=".MainActivity"></activity>
-        <activity android:name=".History.History"
-            android:parentActivityName=".MainActivity"></activity>
-        <activity android:name=".History.ViewPracticalWorkouts"
-            android:parentActivityName=".History.History"></activity>
+        <activity android:name=".WorkoutNow"></activity>
+        <activity android:name=".History.History"></activity>
+        <activity android:name=".History.ViewPracticalWorkouts"></activity>
+        <activity android:name=".History.ViewOldWorkout"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
