--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,10 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
     // use kapt for Kotlin
 
+    //for loading existing sql db
+    implementation 'com.github.daolq3012:AssetSQLiteOpenHelper:V1.0.1'
+    // Because AssetSQLiteOpenHelper releases are few and far between (persistence room version using in module is 1.0.0),
+    // it is recommended you also explicitly depend on Persistence Room's latest version for bug fixes and new features.
+    implementation 'android.arch.persistence.room:runtime:x.x.x'
 
 }
