- Apply fix of jumping keyboard!!! - comment the source of the applied fix - added db file that have much more types of exercises and no initial routines
Signed-off-by: Tamir Mishali <tamirmishali@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity android:name=".ExerciseAbstract.AddExerciseAbstractToWorkoutActivity"></activity>
         <activity android:name=".ExerciseAbstract.AddEditExerciseAbsActivity"
             android:parentActivityName=".ExerciseAbstract.AddExerciseAbstractToWorkoutActivity"></activity>
-        <activity android:name=".WorkoutNow"></activity>
+        <activity android:name=".WorkoutNow"
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity android:name=".History.History"></activity>
         <activity android:name=".History.ViewPracticalWorkouts"></activity>
         <activity android:name=".History.ViewOldWorkout"></activity>
