--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
             path "CMakeLists.txt"
         }
     }
+    namespace 'com.example.tamirmishali.trainingmanager'
 }
 
 dependencies {
