--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    // Outline Box for TextInputLayout
+    implementation 'com.google.android.material:material:1.7.0'
+
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
