Minor fix and adaptation - removed title bar from workoutnow - fixed colors of icons and headers in WorkoutNow - colors adaptation
Signed-off-by: Tamir Mishali <tamirmishali@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     }
     compileSdkVersion 33
     defaultConfig {
-        applicationId "com.example.tamirmishali.trainingmanager.test"
+        applicationId "com.example.tamirmishali.trainingmanager.test" //don't forget to change this back on master branch
         minSdkVersion 24
         targetSdkVersion 33
         versionCode 2
