fixed completedExercise 'V' in ExpandableListView - keyboard positioning compared to ExpandableListView
Signed-off-by: Tamir Mishali <tamirmishali@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:parentActivityName=".ExerciseAbstract.ShowWorkoutAbstractExercises"/>
         <activity
             android:name=".WorkoutNow"
-            android:windowSoftInputMode="adjustPan"
+            android:windowSoftInputMode="adjustResize"
             android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"/>
         <activity android:name=".History.History" />
         <activity android:name=".History.ViewPracticalWorkouts" />
