Bug fix: unable to insert numbers to Set - fix: main bug that i was unable to write numbers in weight and reps editTexts - configuration: changed minimum SDK to 27 from 24 - fix: export SQL Room db to file - fix: focus jump from Reps to Weight editTexts
Signed-off-by: Tamir Mishali <tamirmishali@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
     }
     compileSdkVersion 33
     defaultConfig {
-        applicationId "com.example.tamirmishali.trainingmanager.test" //don't forget to change this back on master branch
-        minSdkVersion 24
+        applicationId "com.example.tamirmishali.trainingmanager.test"
+        minSdk 27//don't forget to change this back on master branch
         targetSdkVersion 33
         versionCode 2
         versionName "2.0"
