--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+**/.idea/
+.idea
 *.iml
 .gradle
 /local.properties
@@ -10,3 +12,40 @@
 /captures
 .externalNativeBuild
 /app/.cxx/*
+
+
+
+# -------- From https://github.com/github/gitignore/blob/main/Android.gitignore
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Log/OS Files
+*.log
+
+# Android Studio generated files and folders
+captures/
+.externalNativeBuild/
+.cxx/
+*.apk
+output.json
+
+# IntelliJ
+*.iml
+.idea/
+misc.xml
+deploymentTargetDropDown.xml
+render.experimental.xml
+
+# Keystore files
+*.jks
+*.keystore
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+
+# Android Profiling
+*.hprof
